<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.koitoer.automation</groupId>
  <artifactId>automation-test</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>automation-test</name>
  <url>http://maven.apache.org</url>

<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <cucumber.java.version>1.1.5</cucumber.java.version>
    <java.version>1.6</java.version>
    <slf4j.version>1.6.4</slf4j.version>
    <log4j.version>1.2.16</log4j.version>
    <junit.version>4.11</junit.version>
    <apache-poi.version>3.9</apache-poi.version>
    <tomcat.dbcp.version>7.0.28</tomcat.dbcp.version>
    <spring.version>3.2.3.RELEASE</spring.version>
    <sqljdbc4.version>4.0</sqljdbc4.version>
  </properties>

   
  
	  <dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			
			<!-- Selenium Dependencies -->
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-server</artifactId>
				<version>2.38.0</version>
			</dependency>
			<dependency>
			  <groupId>org.seleniumhq.selenium</groupId>
			  <artifactId>selenium-server-standalone</artifactId>
			  <version>2.40.0</version>
			</dependency>
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-java</artifactId>
				<version>2.38.0</version>
			</dependency>
			
			<!-- Cucumber Dependencies -->
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-core</artifactId>
				<version>${cucumber.java.version}</version>
			</dependency>
			<dependency>
	            <groupId>info.cukes</groupId>
	            <artifactId>cucumber-java</artifactId>
	            <version>${cucumber.java.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>info.cukes</groupId>
	            <artifactId>cucumber-junit</artifactId>
	            <version>${cucumber.java.version}</version>
	        </dependency>
	        <dependency>
	        	<groupId>info.cukes</groupId>
	             <artifactId>cucumber-spring</artifactId>
	             <version>1.1.3</version>
	        </dependency>
	        
	        
	        <!-- dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-jvm</artifactId>
				<version>${cucumber.java.version}</version>
			</dependency>  -->
	
			<dependency>
				<groupId>net.masterthought</groupId>
				<artifactId>cucumber-reporting</artifactId>
				<version>0.0.21</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>0.0.4</version>
				<scope>test</scope>
			</dependency>
			
			
			<!-- Apache POI -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${apache-poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${apache-poi.version}</version>
			</dependency>
			
			<!-- Spring Framework -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-jdbc</artifactId>
				<version>${tomcat.dbcp.version}</version>
			</dependency>
			
			<!-- SQL drivers -->
			<dependency>
				<groupId>com.microsoft.sqlserver</groupId>
				<artifactId>sqljdbc</artifactId>
				<version>${sqljdbc4.version}</version>
			</dependency>
			
			<!-- Automation core -->
			<dependency>
				<groupId>com.koitoer.automation</groupId>
				<artifactId>automation-core</artifactId>
				<version>1.0.1</version>
			</dependency>
			
			
			<dependency>
        <groupId>info.cukes</groupId>
        <artifactId>cucumber-testng</artifactId>
        <version>1.1.5</version>
        <scope>test</scope>
    </dependency>
	  </dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>${basedir}/src/test/java/</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14</version>
				<executions>
					<execution>
					<id>default-test</id>
					<phase>integration-test</phase>
					<goals>
						<goal>test</goal>
					</goals>
					<configuration>
						<forkCount>5</forkCount>
						<reuseForks>false</reuseForks>
						<argLine>-Duser.language=en</argLine>
						<argLine>-Xmx1024m</argLine>
						<argLine>-XX:MaxPermSize=256m</argLine>
						<argLine>-Dfile.encoding=UTF-8</argLine>
						<useFile>false</useFile>
						<includes>
							<include>**/*Integration**.class</include>
						</includes>
						<testFailureIgnore>true</testFailureIgnore>
					</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
</project>
